--- a/app/src/main/res/layout/fgm_gank_list_content_layout.xml
+++ b/app/src/main/res/layout/fgm_gank_list_content_layout.xml
@@ -29,6 +29,7 @@
 
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/fgm_gank_list_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#e8e8e8"
