--- a/app/src/main/res/layout/aty_top_news.xml
+++ b/app/src/main/res/layout/aty_top_news.xml
@@ -20,13 +20,16 @@
             android:id="@+id/aty_gank_fgm_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#6cd6aa"
             />
 
         <!--fragment的绑定不使用databinding-->
         <FrameLayout
             android:id="@+id/aty_gank_fgm_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:layout_marginTop="30dp"
+            />
 
     </LinearLayout>
 </layout>
