--- a/app/src/main/res/layout/loading_view.xml
+++ b/app/src/main/res/layout/loading_view.xml
@@ -5,7 +5,7 @@
     >
 
     <data>
-
+`
         <import type="com.example.luoshuimumu.TopNews.gank.vm.LoadingViewContainer"/>
 
         <variable
@@ -17,7 +17,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:status="@{status.loadStatusCode}">
+        app:loading_status="@{status.loadStatusCode}">
 
         <TextView
             android:id="@id/tv"
